Use virtual threads for single instance server and in RunMode.controllerDisconnected()